[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
cw-storage-plus = "0.13.4"
thiserror = "1"
cw-utils = "0.13"
rs_merkle = "1.4"
cosmwasm-schema = { version = "1.1.0" }
cw20 = "1.1.0"
schemars = "0.8.3"
sylvia = "0.5.0"

[dev-dependencies]
cw-multi-test = "0.13.4"
cosmwasm-schema = { version = "1.0.0" }
